feat: add comments model

--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -44,6 +44,7 @@ set(HEADERS
     commands/command.h
     commands/commandgroup.h
     comments/comment.h
+    comments/commentsmodel.h
     comments/commentdefinitionresources.h
     comments/localizationresourcereference.h
     comments/policycomments.h
@@ -85,6 +86,7 @@ set(SOURCES
     bundle/policybundle.cpp
     commands/command.cpp
     commands/commandgroup.cpp
+    comments/commentsmodel.cpp
     presentation/presentationwidget.cpp
     registry/abstractregistrysource.cpp
     registry/policystatemanager.cpp
