feat: create comments plugin (#41)
Following actions were taken:
-feat: add cmtx plugin format
-feat: add cmtl plugin format
-feat: add comments plugin
-feat: add xsdcommentsadapter
-fix: fix spec file
-feat: add policy comment file
-fix: fix cmtx.xsd schema
-feat: add policy namespaces
-feat: add comment resources file implementation
-feat: implement cmtl format
-fix: fix cmtl plugin
-feat: implement adater for cmtl file
-chore: move headers to model folder
-feat: add bulk of comment snap-in
-chore: move comments model to administrative templates plugin
-feat: add comments model
-fix: fix spec file
-feat: implement comment loading
-fix: implement policy search
-feat: implement schema adapter
-feat: implement policy namespace parsing
-feat: started to implement comment saving
-feat: unify interface of comment files
-fix: fix null pointer
-feat: update save procedure
-feat: add namespace definition
-fix: fix comment text and namespace value
-fix: append namespaces
-fix: fix resource names
-fix: fix namespace model
-fix: fix namespace indices
-fix: fix addition of comments to model
-fix: prevent save of empty comments

--- a/src/plugins/cmtx/CMakeLists.txt
+++ b/src/plugins/cmtx/CMakeLists.txt
@@ -4,15 +4,18 @@ include_directories(${GPUI_INCLUDE_DIRS})
 find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(HEADERS
+    cmtxformat.h
 )
 
 set(SOURCES
+    cmtxformat.cpp
     cmtxplugin.cpp
 )
+
+add_subdirectory(schema)
 
 add_gpui_plugin(cmtx-plugin ${SOURCES})
 target_link_libraries(cmtx-plugin Qt5::Core)
 target_link_libraries(cmtx-plugin ${GPUI_LIBRARIES} policy-common)
+target_link_libraries(cmtx-plugin cmtx_xsd_library)
 target_link_libraries(cmtx-plugin xerces-c)
-
-add_subdirectory(schema)
