feat: add stub for security snap-in

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -26,5 +26,6 @@ add_subdirectory(pol)
 add_subdirectory(preferences)
 add_subdirectory(reg)
 add_subdirectory(scripts)
+add_subdirectory(security)
 add_subdirectory(spol)
 add_subdirectory(storage)
