--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ concurrency:
 
 jobs:
   gpui-build-container:
+    if: github.event_name != 'pull_request'
     uses: ./.github/workflows/build-container.yml
     secrets: inherit
     strategy:
@@ -45,6 +46,7 @@ jobs:
       architecture: "amd64"
 
   gpui-publish-api-docs:
+    if: github.event_name != 'pull_request'
     uses: ./.github/workflows/publish-api-docs.yml
     needs: [ gpui-build, gpui-test ]
     secrets: inherit
