--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: gpui-ci
 on:
   workflow_dispatch:
   workflow_call:
+  pull_request:
+    types: [ opened, synchronize, ready_for_review ]
   push:
     branches: [ master ]
 
