chore: try to move conditions inside jobs

--- a/.github/workflows/publish-api-docs.yml
+++ b/.github/workflows/publish-api-docs.yml
@@ -5,6 +5,7 @@ on: [ workflow_call, workflow_dispatch ]
 jobs:
   gpui-publish-api-doc:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Git Checkout
