feat: update security schema

--- a/src/plugins/security/schema/CMakeLists.txt
+++ b/src/plugins/security/schema/CMakeLists.txt
@@ -4,6 +4,7 @@ set(XSD_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/basetypes.xsd"
     "${CMAKE_CURRENT_SOURCE_DIR}/securitydefinitions.xsd"
     "${CMAKE_CURRENT_SOURCE_DIR}/securitydefinitionfiles.xsd"
+    "${CMAKE_CURRENT_SOURCE_DIR}/security.xsd"
 )
 
 add_xsd_library(security_static_xsd_library ${XSD_FILES})
