feat: add sdml and sdmx plugin files

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -25,6 +25,8 @@ add_subdirectory(ini)
 add_subdirectory(pol)
 add_subdirectory(preferences)
 add_subdirectory(reg)
+add_subdirectory(sdml)
+add_subdirectory(sdmx)
 add_subdirectory(scripts)
 add_subdirectory(security)
 add_subdirectory(spol)
