--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -22,3 +22,6 @@ add_definitions(
 
 add_gpui_library(gpui-core ${SOURCES})
 target_link_libraries(gpui-core Qt5::Core Qt5::Gui Qt5::Widgets)
+
+add_subdirectory(logger)
+target_link_libraries(gpui-core gpui-logger)
