--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   workflow_call:
   push:
-    branches: [ master ]
+    branches: [ "*" ]
   pull_request:
     types: [ opened, synchronize, ready_for_review ]
 
