--- a/src/core/logger/CMakeLists.txt
+++ b/src/core/logger/CMakeLists.txt
@@ -1,10 +1,23 @@
-find_package(Qt5 COMPONENTS Core Gui REQUIRED)
+find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-file(GLOB HEADERS "*.h")
+set(HEADERS
+    loggermanager.h
+    loggermessage.h
+    logger.h
+    consolelogger.h
+    filelogger.h
+    sysloglogger.h
+)
 
-file(GLOB SOURCES "*.cpp")
+set(SOURCES
+    loggermanager.cpp
+    logger.cpp
+    consolelogger.cpp
+    filelogger.cpp
+    sysloglogger.cpp
+)
 
 add_definitions(
     -DGPUI_CORE_LIBRARY
@@ -12,4 +25,4 @@ add_definitions(
 
 add_library(gpui-logger STATIC ${SOURCES} ${HEADERS})
 target_include_directories(gpui-logger PUBLIC ${Qt5Gui_INCLUDE_DIRS})
-target_link_libraries(gpui-logger Qt5::Core Qt5::Gui)
+target_link_libraries(gpui-logger Qt5::Core)
