--- a/src/plugins/sdmx/CMakeLists.txt
+++ b/src/plugins/sdmx/CMakeLists.txt
@@ -19,5 +19,6 @@ set(SOURCES ${SOURCES} ${HEADERS})
 add_gpui_plugin(${PLUGIN_NAME} ${SOURCES})
 target_link_libraries(${PLUGIN_NAME} Qt5::Core)
 target_link_libraries(${PLUGIN_NAME} ${GPUI_LIBRARIES})
+target_link_libraries(${PLUGIN_NAME} policy-common)
+target_link_libraries(${PLUGIN_NAME} security_static_xsd_library)
 target_link_libraries(${PLUGIN_NAME} xerces-c)
-target_link_libraries(${PLUGIN_NAME})
