feat: update desktop files

--- a/setup/gpui.desktop
+++ b/setup/gpui.desktop
@@ -31,8 +31,8 @@ Name[zh_TW]=GPUI
 GenericName=GPUI
 GenericName[ru]=Редактор групповых политик
 X-GNOME-FullName=GPUI
-Comment=Group Policy Editor
-Comment[ru]=Редактор групповых политик
+Comment=Group Policy Editor allows user to edit group policy templates
+Comment[ru]=Редактор групповых политик позволяет редактировать шаблоны групповых политик
 Exec=gpui-main
 Terminal=false
 Type=Application
