feat: implement settings saving in administrative templates plugin

--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -74,6 +74,7 @@ set(HEADERS
     ui/administrativetemplatesproxymodel.h
     ui/administrativetemplateswidget.h
     ui/administrativetemplatessettingswidget.h
+    ui/administrativetemplatessettingsobject.h
     ui/presentationbuilder.h
     ui/platformmodel.h
     ui/templatefilterdialog.h
@@ -95,6 +96,7 @@ set(SOURCES
     ui/administrativetemplatesproxymodel.cpp
     ui/administrativetemplateswidget.cpp
     ui/administrativetemplatessettingswidget.cpp
+    ui/administrativetemplatessettingsobject.cpp
     ui/presentationbuilder.cpp
     ui/platformmodel.cpp
     ui/templatefilterdialog.cpp
