chore: add test for settings

--- a/tests/auto/core/CMakeLists.txt
+++ b/tests/auto/core/CMakeLists.txt
@@ -2,3 +2,4 @@ find_package(GPUI COMPONENTS gui core REQUIRED)
 include_directories(${GPUI_INCLUDE_DIRS})
 
 add_subdirectory(translatorstorage)
+add_subdirectory(settings)
