fix: The policy options "file search service" are not working correctly (#64)
* wip: adding `BooleanValue`

* wip: adding `BooleanList` to `PolicyBoolElement`

* wip: formatting with QT `.clang-format`

* wip: improve BooleanValue with `union` for fields and cctor mctor

* wip: adding long decimal

* wip: adding some methods and small refactor

* wip: extend `XsdBooleanElementAdapter`

* wip: adding trueList/falseList support `PresentationBuilderPrivate`

* wip: fix constructors

* wip: fix adding return statement to `XsdListToAdmxBooleanList`

* fix: refactoring the code for the plugin architecture

* fix: removing unnecessary return

* style: removing unnecessary \n

* fix: write `trueValue`/`falseValue` into `trueList`/`falseList` in Admx `BooleanValue`

* wip: rearranging fields in `BooleanValue`

* fix: code refactoring with adding normal support `trueValue`/`falseValue` and `trueList`/`falseList`

--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories("${CMAKE_SOURCE_DIR}/src/core")
 set(HEADERS
     administrativetemplates.h
     administrativetemplatessnapin.h
+    admx/booleanvalue.h
     admx/category.h
     admx/majorversion.h
     admx/minorversion.h
