wip: `libparsepol` adding

--- a/src/plugins/pol/CMakeLists.txt
+++ b/src/plugins/pol/CMakeLists.txt
@@ -3,25 +3,22 @@ include_directories(${GPUI_INCLUDE_DIRS})
 
 find_package(Qt5 COMPONENTS Core REQUIRED)
 
+set(CMAKE_CXX_STANDARD 17)
+
 set(HEADERS
     polformat.h
-
-    pregdata.h
-    pregparser.h
-    iconvwrapper.h
+    common.h
+    encoding.h
+    parser.h
 )
 
 set(SOURCES
+    binary.cpp
+    parser.cpp
+
     polplugin.cpp
     polformat.cpp
-
-    pregdata.cpp
-    pregparser.cpp
-    pregwriter.cpp
-    iconvwrapper.cpp
 )
-
-add_subdirectory(schemas)
 
 add_gpui_plugin(pol-plugin ${SOURCES})
 target_link_libraries(pol-plugin Qt5::Core)
