--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(cmtl)
 add_subdirectory(cmtx)
 add_subdirectory(common)
 add_subdirectory(ini)
+add_subdirectory(ini_ascii)
 add_subdirectory(pol)
 add_subdirectory(preferences)
 add_subdirectory(reg)
