wip: end of refactoring

--- a/src/plugins/preferences/CMakeLists.txt
+++ b/src/plugins/preferences/CMakeLists.txt
@@ -198,6 +198,7 @@ set(HEADERS
     common/preferenceswidget.h
 
     common/inputmessagenotifier.h
+    common/inputdetectors.h
 )
 
 set(SOURCES
@@ -382,6 +383,7 @@ set(SOURCES
     common/preferenceswidget.cpp
 
     common/inputmessagenotifier.cpp
+    common/inputdetectors.cpp
 )
 
 set(UI_FORMS
